site/docs/v0.4.1/en/components/tool-call.mdx
# Tool Call

Tool Call turns one external capability execution into an auditable name, input, progress, result, and recovery path. Its collapsed summary answers what is happening, which integration owns it, and its current state; potentially long input and output stay behind the disclosure.

<Preview class="w-full max-w-4xl" title="Repository search in progress">
  <details
    class="tool-call"
    data-state="running"
    open
    data-tool-call-primary-demo="en"
  >
    <summary data-tool-call-summary>
      <span data-tool-kind aria-hidden="true"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="11" cy="11" r="7"/><path d="m20 20-4-4"/></svg></span>
      <span data-tool-identity>
        <strong data-tool-call-title>Find permission boundary implementations</strong>
        <small data-tool-operation>search · rg "permission|policy" src</small>
      </span>
      <span data-tool-duration>1.8 s</span>
      <span class="status-badge" data-state="info" data-tool-status>Running</span>
      <span data-tool-chevron aria-hidden="true">›</span>
    </summary>
    <section data-tool-content>
      <div data-tool-metadata><span>Working directory <code>/workspace/ui</code></span><span>Call ID <code>call_8f42</code></span><span>Output redacted</span></div>
      <div data-tool-view>
        <header><strong>Arguments</strong><span>JSON</span></header>
        <pre data-tool-input>{`{"query":"permission|policy","path":"src","limit":200}`}</pre>
      </div>
      <div data-tool-view>
        <header><strong>Live output</strong><span>3 matches</span></header>
        <pre data-tool-output>{`src/security/policy.ts:42: export function authorize(...)
src/runtime/permission.ts:18: type PermissionDecision = ...
tests/policy.spec.ts:71: expect(decision).toEqual(...)`}</pre>
      </div>
      <progress data-tool-progress value="68" max="100" aria-label="Tool call progress">68%</progress>
      <p data-tool-error hidden>The call failed. Review permissions and retry.</p>
    </section>
    <footer>
      <button type="button" class="btn" data-size="sm" data-variant="ghost" data-tool-action="copy-output">Copy output</button>
      <button
        type="button"
        class="btn"
        data-size="sm"
        data-variant="outline"
        data-tool-action="cancel"
        data-preview-onclick="const root=this.closest('[data-tool-call-primary-demo]'); root.setState('interrupted',{label:'Interrupted'}); root.close();"
      >
        Stop
      </button>
    </footer>
  </details>
</Preview>

## Product boundary

Tool Call is not a generic log container. It preserves the information a person needs to decide whether an execution is trustworthy without dumping provider-internal fields into the interface.

- Use an intent-level title such as “Read configuration,” not only `shell_command`.
- Distinguish preparing, awaiting approval, running, succeeded, denied, failed, timed out, and interrupted.
- Enter `awaiting` before a risky operation and let the host render explicit approve and deny actions.
- Separate input, output, and error. Long content keeps its own scroll boundary instead of expanding the task timeline indefinitely.
- Retry, stop, copy, and open-file actions emit events; networking, authorization, and auditing remain host responsibilities.

## Framework usage

<FrameworkTabs
  html={`<details class="tool-call" data-state="preparing">
  <summary>
    <span data-tool-kind aria-hidden="true"><svg viewBox="0 0 16 16" width="16" height="16"><path d="M3 4h10M3 8h10M3 12h6" /></svg></span>
    <span data-tool-identity><strong>Read repository status</strong><small data-tool-operation>shell · git status --short</small></span>
    <span data-tool-duration>0 ms</span>
    <span data-tool-status>Preparing</span>
    <span data-tool-chevron aria-hidden="true">›</span>
  </summary>
  <section data-tool-content>
    <pre data-tool-input>{"workdir":"/workspace/ui"}</pre>
    <pre data-tool-output></pre>
    <p data-tool-error hidden></p>
  </section>
  <footer><button type="button" data-tool-action="copy-output">Copy output</button></footer>
</details>
<script type="module">
  import "@a3s-lab/ui";
  import "@a3s-lab/ui/tool-call";
  const call = document.querySelector(".tool-call");
  call.setState("running", { label: "Running" });
  call.appendOutput("M src/runtime.ts\\n");
  call.setState("succeeded", { label: "Succeeded", duration: "824 ms" });
</script>`}
  react={`import { ToolCall, useToolCall } from "@a3s-lab/ui/react";

export function RepositoryStatus() {
  const control = useToolCall({
    events: {
      "a3s:tool-before-action": event => authorizeToolAction(event.detail),
      "a3s:tool-state-change": event => recordToolState(event.detail),
    },
  });

  return (
    <ToolCall ref={control.ref} data-state="preparing">
      <summary><span data-tool-identity><strong>Read repository status</strong><small>shell · git status --short</small></span><span data-tool-status>Preparing</span></summary>
      <section data-tool-content><pre data-tool-output /></section>
    </ToolCall>
  );
}

control.call("setState", "running", { label: "Running" });
control.call("appendOutput", chunk);`}
  vue={`<script setup lang="ts">
import { ToolCall, useToolCall } from "@a3s-lab/ui/vue";

const control = useToolCall({
  events: {
    "a3s:tool-before-action": event => authorizeToolAction(event.detail),
    "a3s:tool-state-change": event => recordToolState(event.detail),
  },
});

function append(chunk: string) {
  control.call("setState", "running", { label: "Running" });
  control.call("appendOutput", chunk);
}
</script>

<template>
  <ToolCall :ref="control.componentRef" data-state="preparing">
    <summary><span data-tool-identity><strong>Read repository status</strong><small>shell · git status --short</small></span><span data-tool-status>Preparing</span></summary>
    <section data-tool-content><pre data-tool-output /></section>
  </ToolCall>
</template>`}
/>

## Controller

| Method | Result |
| --- | --- |
| `setState(state, options)` | Synchronizes state, label, duration, and error, then emits a state event |
| `setProgress(value)` | Sets determinate `0–100` progress; a non-number restores indeterminate progress |
| `appendOutput(chunk)` | Appends streaming output and emits `a3s:tool-output-change` |
| `setOutput(output)` | Atomically replaces output for non-streaming results |
| `openCall()` / `close()` / `toggle(force)` | Controls the native `<details>` disclosure |
| `runAction(action)` | Emits a host action after a cancelable authorization event |
| `getState()` | Returns an immutable state, progress, duration, output, and disclosure snapshot |

Prefer `preparing`, `awaiting`, `running`, `succeeded`, `failed`, `denied`, `timed-out`, and `interrupted`. The legacy `queued`, `waiting`, `success`, `cancelled`, and `error` states remain compatible.

## Accessibility and security

The action name and state in the summary cannot rely on color or an icon alone. The runtime exposes running state through `aria-busy`; an approval flow moves focus to real buttons, and completion produces one polite status announcement. Remove tokens, cookies, secrets, and personal data before rendering. Copy only the already-redacted visible output.
